--- a/backend_spring/build.gradle
+++ b/backend_spring/build.gradle
@@ -28,3 +28,8 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+bootJar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    mainClass = 'com.example.backend_spring.BackendSpringApplication'
+}
