--- a/backend_maven/src/main/resources/application.properties
+++ b/backend_maven/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=backend_maven
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/cpre436
+#spring.datasource.url=jdbc:mysql://104.190.100.80:3306/cpre436
 spring.datasource.username=cpre436
 #spring.datasource.username=root
 spring.datasource.password=cpre436
