--- a/backend_maven/src/main/resources/application.properties
+++ b/backend_maven/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=backend_maven
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/cpre436
-#spring.datasource.url=jdbc:mysql://104.190.100.80:3306/cpre436
-spring.datasource.username=cpre436
-#spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/cpre436
+spring.datasource.url=jdbc:mysql://104.190.100.80:3306/cpre436
+#spring.datasource.username=cpre436
+spring.datasource.username=root
 spring.datasource.password=cpre436
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
