--- a/backend_maven/src/main/resources/application.properties
+++ b/backend_maven/src/main/resources/application.properties
@@ -5,5 +5,4 @@ spring.datasource.url=jdbc:mysql://104.190.100.80:3306/cpre436
 #spring.datasource.username=cpre436
 spring.datasource.username=cpre436
 spring.datasource.password=cpre436X!
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
