--- a/backend_maven/src/main/resources/application.properties
+++ b/backend_maven/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=backend_maven
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/cpre436
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cpre436
-#spring.datasource.username=cpre436
+spring.datasource.url=jdbc:mysql://localhost:3306/cpre436
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cpre436
 spring.datasource.username=cpre436
 spring.datasource.password=cpre436X!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+spring.jpa.show-sql: true
